testwar/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testwar-service
  labels:
    app: testwar
spec:
  selector:
    app: testwar
  # type: NodePort
  type: LoadBalancer
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      # nodePort: 32100
      protocol: TCP
    - name: https
      port: 8443
      targetPort: 8443
      # nodePort: 32101
      protocol: TCP
    - name: mgmt-http
      port: 9990
      targetPort: 9990
      # nodePort: 32102
      protocol: TCP
    - name: mgmt-https
      port: 9993
      targetPort: 9993
      # nodePort: 32103
      protocol: TCP
